--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "@google/generative-ai": "^0.24.0"
+    "duck-duck-scrape": "^2.2.7",
+    "groq-sdk": "^0.37.0"
   }
 }
